# ChangeLog for dev-perl/Audio-Wav
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Audio-Wav/ChangeLog,v 1.35 2010/02/11 20:08:03 tove Exp $

*Audio-Wav-0.09 (11 Feb 2010)

  11 Feb 2010; Torsten Veller <tove@gentoo.org> +Audio-Wav-0.09.ebuild:
  Version bump

*Audio-Wav-0.08 (09 Feb 2010)

  09 Feb 2010; Torsten Veller <tove@gentoo.org> +Audio-Wav-0.08.ebuild:
  Version bump

  28 Jan 2010; Torsten Veller <tove@gentoo.org> Audio-Wav-0.06.ebuild:
  Fix LICENSE: same terms as perl (#301969)

  02 May 2009; Torsten Veller <tove@gentoo.org> -Audio-Wav-0.04.ebuild:
  Cleanup

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Audio-Wav-0.06.ebuild:
  Stable on x86, bug #169152.

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Audio-Wav-0.04.ebuild, Audio-Wav-0.06.ebuild:
  Ebuild maintenance

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Audio-Wav-0.06.ebuild:
  Stable on Alpha.

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> Audio-Wav-0.06.ebuild:
  Stable on ia64.

  28 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> Audio-Wav-0.06.ebuild:
  Stable on hppa

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Audio-Wav-0.06.ebuild:
  ppc stable

  07 Sep 2006; Michael Cummings <mcummings@gentoo.org>
  -Audio-Wav-0.02.ebuild:
  Removing old ebuild

  05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> Audio-Wav-0.06.ebuild:
  Stable on sparc

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Audio-Wav-0.06.ebuild:
  Marking amd64 stable

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Audio-Wav-0.02.ebuild, Audio-Wav-0.04.ebuild, Audio-Wav-0.06.ebuild:
  Adding perl dep; fixed DEPEND

  03 Jul 2006; Christian Hartmann <ian@gentoo.org> Audio-Wav-0.02.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

*Audio-Wav-0.06 (24 Apr 2006)

  24 Apr 2006; <mcummings@gentoo.org> +Audio-Wav-0.06.ebuild:
  Version bump of Audio-Wav
