@@ -1,0 +1,19 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Audio-Wav/Attic/Audio-Wav-0.10.ebuild,v 1.1 2010/02/14 09:21:08 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=BRIANSKI
+inherit perl-module
+
+DESCRIPTION="Modules for reading & writing Microsoft WAV files."
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86"
+IUSE=""
+
+RDEPEND="dev-perl/Inline"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
