@@ -4,15 +4,17 @@ Hash: SHA1
 DIST Audio-Wav-0.06.tar.gz 18201 RMD160 7b79802e114c91e47a484f14804f9e01167ab069 SHA1 2a95f42bd9ec80c564f479f2384a12fef4ecf038 SHA256 647b35a72fb9dc8024ec9ea38accc1b7244a5717823d22fc20123e77eb6a5426
 DIST Audio-Wav-0.08.tar.gz 20237 RMD160 92ae7fe85db25641ab9014e67a157302faac51ca SHA1 b1352368fae5cd0b44e702f214e32a1e4690e851 SHA256 ffd2fa348a400cde348757f80ae168fc624b1f89dfc003a6f8d54027b5d30c37
 DIST Audio-Wav-0.09.tar.gz 21353 RMD160 91363fefc664527bcb4ecf24b083a537b9a7ba34 SHA1 3934f7ef3df6b9da23cba26af51fefd7879b6e2e SHA256 0d2702c1b3969bf6f301492ba340515bf048f9f2a7c047c2604056b76c541b66
+DIST Audio-Wav-0.10.tar.gz 21803 RMD160 1bb5573497cf98512169e918dac166d2d193d6ce SHA1 e74f6c1adbddb1b957a0e4bf82f5917ad3fcf642 SHA256 89b9c095c90eff52a2667fcb0fa04fb86ded916ebaeeaf34fa8b2b5c1db4731d
 EBUILD Audio-Wav-0.06.ebuild 419 RMD160 a86a235b1e9f346714131637740ecea5c1f2d6e2 SHA1 79a0644bb525a9352fa288df63ed4d3847d96e70 SHA256 52e48791b05281559ec3ea08901a2d20bdd3e885b81eef16280988262cde31b3
 EBUILD Audio-Wav-0.08.ebuild 425 RMD160 e274407c7cf73c783a68ca6ef8f8985469a556ac SHA1 b17dcd5690e17005e45b9eca0e63d02889cb6495 SHA256 730d3e5072b32c0ae0074a494ef21eca99519d934da73ca6c76c18595dfe9f3b
 EBUILD Audio-Wav-0.09.ebuild 472 RMD160 d658a1734394828c4814c14054a524397631b465 SHA1 75c544859b92bb2be90fbd601ac05a84ef7da168 SHA256 ffb4dc95c8337ffed083f66796c264de92e57114a49181f83e4261920dd18ab9
-MISC ChangeLog 3501 RMD160 4a0f1bc68f021dab207422b2c581c43c708f4050 SHA1 81ba767565081cf4903179e223a24af6614bb623 SHA256 d06fef0bb148da348dd5ad76d12fc8cc560121e7b9a917cfb7a30460458e849d
+EBUILD Audio-Wav-0.10.ebuild 472 RMD160 74ffc43e080e96fb673215cb860268df87c4cd25 SHA1 611efe761bb954f7ab857780f35d6d3fa1150d04 SHA256 5d8c8668ff895a2fade1bfa9104c399324aa809fe74187f179f7a0b21d1163ad
+MISC ChangeLog 3620 RMD160 8f26ca6b17fb31ded12c9086112c819f1b177e30 SHA1 43c643ab9cdecb82f5a5e230eff84dc2afcc8e72 SHA256 a9960f73c80c753881d596339ce65c6730d0ad0d377ba450f542cfb9ddf7aab8
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkt0Y6kACgkQV3J2n04EauxJLQCdHslHmUB/yYtBAc+k/e/+8Xyi
-4OIAoLxas87h69mOvEHC3LCGjg0/hh+E
-=Ns4P
+iEYEARECAAYFAkt3wIoACgkQV3J2n04EauxPDwCgoPcvGmfJZPXc+FDw5o45mbM7
+gwEAoMwpURODYYr2GSqANu/e/JwtEN4k
+=+x3z
 -----END PGP SIGNATURE-----
