@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Audio-Wav
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Audio-Wav/ChangeLog,v 1.35 2010/02/11 20:08:03 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Audio-Wav/ChangeLog,v 1.36 2010/02/14 09:21:08 tove Exp $
+
+*Audio-Wav-0.10 (14 Feb 2010)
+
+  14 Feb 2010; Torsten Veller <tove@gentoo.org> +Audio-Wav-0.10.ebuild:
+  Version bump
 
 *Audio-Wav-0.09 (11 Feb 2010)
 
